--- a/html/index.html
+++ b/html/index.html
@@ -8,8 +8,6 @@
   </div>
   
   
-  <script>
-    
-  </script>
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
   
 </body>
